--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
 title: Edgar Acosta Investments
-email: your-email@domain.com
+email: eaipr@eainvestment.net
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It ill appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
 baseurl: "/Edweb" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+
 
 # Build settings
 markdown: kramdown
